small alignment fixes

--- a/html/assets/css/mobile.css
+++ b/html/assets/css/mobile.css
@@ -20,19 +20,19 @@
     }
 
     .searchDivInner form .inner-form .input-field.first-wrap {
-      width: 150px;
-      border-right: 1px solid rgba(0, 0, 0, 0.1);
+        width: 150px;
+        border-right: 1px solid rgba(0, 0, 0, 0.1);
     }
 
     .searchDivInner form .inner-form .input-field input {
-      height: 100%;
-      background: transparent;
-      border: 0;
-      display: block;
-      width: 100%;
-      padding: 10px 32px;
-      font-size: 23px;
-      color: #555;
+        height: 100%;
+        background: transparent;
+        border: 0;
+        display: block;
+        width: 100%;
+        padding: 10px 32px;
+        font-size: 23px;
+        color: #555;
     }
 
     #searchDiv {
@@ -42,7 +42,11 @@
     }
 
     h3 {
-      margin-bottom: 2rem;
+        margin-bottom: 2rem;
+    }
+
+    .title-div {
+        width: 100%;
     }
     
     .btn-container, .main-tab-select {
@@ -103,10 +107,6 @@
         padding-left: 2vw;
 	}
 	
-	.tags, .notes {
-		text-align: center;
-	}
-
 	.tags {
 		padding-bottom: 5px;
 	}
